<resources>
    <string name="app_name">SistemaCrediticio</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre Completo</string>
    <string name="correo">Correo electrónico / E-mail</string>
    <string name="ine_lado1">INE Foto frontal</string>
    <string name="ine_lado2">INE Foto trasera</string>
    <string name="google_maps">Dirección</string>
    <string name="cargar_direccion">Cargar dirección</string>
    <string name="title_activity_maps">Map</string>
    <string name="datos_personales">Datos personales</string>
    <string name="comprobante_domicilio">Comprobante de domicilio</string>
    <string name="datos__del_credito">Datos del crédito</string>
    <string name="num_telefono">Número de telefono</string>
    <string name="ciudad_localidad">Ciudad/Localidad</string>
    <string name="tipo_ingreso">Tipo de ingreso</string>
    <string name="cantidad_solicitada">Cantidad solicitada</string>
    <string name="plazo_a_pagar">Plazo a pagar</string>
    <string name="contrasenia">Constraseña</string>
    <string name="usuario">Usuario</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="apellido_paterno">Apellido paterno</string>
    <string name="apellido_materna">Apellido materno</string>
    <string name="nombre_completo">Nombre (s)</string>
    <string name="numTelefono">Número de telefono</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="registrar">Registrar</string>


</resources>
