<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CrearUsuarioFragment"
    android:background="@drawable/fondo_login">


    <Button
        android:id="@+id/button_second"
        android:layout_width="273dp"
        android:layout_height="49dp"
        android:text="@string/registrar"
        android:textColorHint="#ffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmContrasena"
        app:layout_constraintVertical_bias="0.479" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/nombre_completo"
        android:textColorHint="#ffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003" />

    <EditText
        android:id="@+id/txtApellidoPa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="420dp"
        android:backgroundTint="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/apellido_paterno"
        android:inputType="textPersonName"
        android:textColorHint="#ffff"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre"
        app:layout_constraintVertical_bias="0.125" />

    <EditText
        android:id="@+id/txtApellidoMa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/apellido_materna"
        android:inputType="textPersonName"
        android:textColorHint="#ffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellidoPa"
        app:layout_constraintVertical_bias="0.008" />

    <EditText
        android:id="@+id/txtNumTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/num_telefono"
        android:inputType="textPersonName"
        android:textColorHint="#ffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellidoMa" />

    <EditText
        android:id="@+id/txtContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPersonName"
        android:textColorHint="#ffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNumTel" />

    <EditText
        android:id="@+id/txtConfirmContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="30dp"
        android:backgroundTint="@color/design_default_color_background"
        android:ems="10"
        android:hint="@string/confirmar_contrasena"
        android:inputType="textPersonName"
        android:textColorHint="#ffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtContrasena" />


</androidx.constraintlayout.widget.ConstraintLayout>