<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SolicitarPrestamo"
    android:background="@color/fondo">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="800dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card1"
                android:layout_width="wrap_content"
                android:layout_height="889dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="24dp"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="24dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:contentPadding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/label_medical_center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="236dp"
                        android:text="@string/datos_personales"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editText"
                        android:layout_width="282dp"
                        android:layout_height="53dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="48dp"
                        android:background="@drawable/round_edit_text"
                        android:ems="10"
                        android:hint="@string/nombre"
                        android:inputType="textPersonName"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.494"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="276dp"
                        android:layout_height="55dp"
                        android:layout_below="@+id/editText"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/round_edit_text"

                        android:hint="@string/correo"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText" />


                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtCiudadLocalidad"
                        android:layout_alignParentStart="true"
                        android:layout_marginTop="36dp"
                        android:hint="@string/ine_lado1"

                        android:textColorHint="#070707"
                        android:textSize="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.187"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtCiudadLocalidad" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/editText2"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="24dp"
                        android:layout_toEndOf="@+id/textView2"
                        android:hint="@string/ine_lado2"
                        android:textColorHint="#070707"
                        android:textSize="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgFotoFrontal" />

                    <ImageView
                        android:id="@+id/imgFotoFrontalTomada"
                        android:layout_width="113dp"
                        android:layout_height="95dp"
                        android:layout_below="@id/imgFotoFrontal"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="200dp"
                        android:layout_marginTop="8dp"
                        android:src="@mipmap/ic_launcher_round"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <ImageView
                        android:id="@+id/imgFotoFrontal"
                        android:layout_width="123dp"
                        android:layout_height="79dp"
                        android:layout_below="@id/textView2"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:src="@drawable/icono_camara"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <ImageView
                        android:id="@+id/imgFotoTrasera"
                        android:layout_width="123dp"
                        android:layout_height="79dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="28dp"

                        android:layout_toEndOf="@+id/imgFotoFrontal"
                        android:src="@drawable/icono_camara"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3" />

                    <ImageView
                        android:id="@+id/imgFotoTraseraTomada"
                        android:layout_width="113dp"
                        android:layout_height="95dp"
                        android:layout_below="@id/imgFotoFrontal"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="200dp"
                        android:layout_marginTop="56dp"
                        android:src="@mipmap/ic_launcher_round"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgFotoFrontalTomada" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="267dp"
                        android:layout_height="25dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="12dp"
                        android:hint="@string/comprobante_domicilio"
                        android:textColorHint="#070707"
                        android:textSize="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgFotoTrasera" />

                    <ImageView
                        android:id="@+id/imgFotoComprobante"
                        android:layout_width="123dp"
                        android:layout_height="79dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="24dp"
                        android:layout_toEndOf="@+id/imgFotoFrontal"
                        android:src="@drawable/icono_camara"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <ImageView
                        android:id="@+id/imgFotoComprobanteTomado"
                        android:layout_width="113dp"
                        android:layout_height="95dp"
                        android:layout_below="@id/imgFotoFrontal"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="52dp"
                        android:src="@mipmap/ic_launcher_round"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imgFotoTraseraTomada" />

                    <EditText
                        android:id="@+id/txtNumTel"
                        android:layout_width="276dp"
                        android:layout_height="55dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/round_edit_text"
                        android:hint="@string/num_telefono"
                        android:textAlignment="center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.621"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editText2" />

                    <EditText
                        android:id="@+id/txtCiudadLocalidad"
                        android:layout_width="276dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/round_edit_text"
                        android:hint="@string/ciudad_localidad"
                        android:textAlignment="center"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtNumTel" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card2"
                android:layout_width="346dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/card1"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="22dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="25dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="5dp"
                app:contentPadding="16dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/labelCredito"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="236dp"
                        android:text="@string/datos__del_credito"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/label_tipo_ingreso"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/tipo_ingreso"
                        android:textColor="#070707"
                        android:textSize="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/labelCredito" />

                    <Spinner
                        android:id="@+id/spiner"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:entries="@array/lista_fuente_ingreso"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_tipo_ingreso" />

                    <EditText
                        android:id="@+id/txtCantidadSolicitada"
                        android:layout_width="276dp"
                        android:layout_height="55dp"
                        android:layout_marginStart="28dp"
                        android:layout_marginTop="32dp"
                        android:background="@drawable/round_edit_text"
                        android:hint="@string/cantidad_solicitada"
                        app:layout_constraintTop_toBottomOf="@id/spiner"
                        app:layout_constraintStart_toStartOf="parent"
                        android:textAlignment="center"
                        />
                    <TextView
                        android:id="@+id/label_plazo_a_pagar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/plazo_a_pagar"
                        app:layout_constraintTop_toBottomOf="@id/txtCantidadSolicitada"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="15dp"
                        android:textSize="20dp"
                        android:textColor="#070707"
                        />
                    <Spinner
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/lista_plazo_a_pagar"
                        app:layout_constraintTop_toBottomOf="@id/label_plazo_a_pagar"
                        android:layout_marginTop="10dp"
                        app:layout_constraintStart_toStartOf="parent"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


        </RelativeLayout>

            </ScrollView>


</RelativeLayout>
